# math-assistant

./: .gitignore  LICENSE  dune-project  math-assistant.opam
commands/: command.ml  command.mli  command_parser_utils.ml  command_parser_utils.mli  command_parser_utils_intf.ml  dune  hole_expr.ml  hole_expr.mli  hole_expr_command.ml  hole_expr_command.mli  manipulation_command.ml  manipulation_command.mli  multihole_expr_lexer.mll  multihole_expr_parser.mly
expr_manipulation/: apply_derivatives.ml  apply_derivatives.mli  dune  evaluate_constant_expressions.ml  evaluate_constant_expressions.mli  flatten_sums_and_products.ml  manipulation.ml  reduce_constants.ml  take_derivative.ml  take_derivative.mli
lib/: command_input.ml  command_input_lexer.mll  command_input_parser.mly  compound_constant.ml  compound_constant.mli  constant.ml  constant.mli  dune  expr.ml  expr.mli  expr_manipulations.ml  expr_manipulations.mli  expr_manipulations_intf.ml  latex_builder.ml  latex_builder.mli  monoid.ml  monoid.mli  quickterface_math_builder.ml  quickterface_math_builder.mli  variable.ml  variable.mli
test/: dune  test_expr_manipulations.ml  test_expr_manipulations_apply_derivatives.ml  test_expr_manipulations_evaluate_constant_expressions.ml  test_expr_manipulations_flatten_sums_and_products.ml  test_expr_manipulations_reduce_constants.ml  test_expr_manipulations_take_derivative.ml  test_math_assistant.ml
test/commands/: dune  main.ml  test_hole_expression_command.ml  test_manipulation_command.ml
test/expr_manipulation/: dune  main.ml  test_apply_derivatives.ml  test_evaluate_constant_expressions.ml  test_flatten_sums_and_products.ml  test_reduce_constants.ml  test_take_derivative.ml
