(ocamllex command_input_lexer)

(menhir
 (modules command_input_parser))

(library
 (name math_assistant)
 (modules
  monoid
  command_input
  command_input_lexer
  command_input_parser
  latex_builder
  constant
  variable
  expr
  compound_constant
  expr_manipulations_intf
  expr_manipulations)
 (libraries core alcotest quickterface)
 (preprocess
  (pps ppx_jane ppx_deriving.show)))
